--- a/flaskr/templates/about.html
+++ b/flaskr/templates/about.html
@@ -8,15 +8,13 @@ About Cats on Skis
 <h3>About Cats on Skis</h3>
 
 <p>
-We love Cats on Skis! This is the absolute best place to find information about cats on skis.
+We love Cats on Skis! This is the absolute best place to find information about cats on skis. hello 
 </p>
 
-<h3>Your Authors</h3>
+<h3>Your Author: Slalom Sammy </h3>
 
-<p>
-Slalom Sammy 
-<img src="{{ url_for('images', image='slalom-sammy') }}">
-</p>
-
+<figure class="has-text-left">
+    <img src="{{ url_for('images', image='slalom-sammy') }}" style="width: 300px; height: 200px;"/>
+</figure>
 {% endblock %}
 
