--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -11,7 +11,26 @@
 <body>
     <!-- The below tag is using Bulma CSS. Try replacing line 14 with line 13. -->
     <!-- <div class="has-text-success-dark is-size-4  has-text-weight-medium"> -->
-    <div>
+    <div class="tabs is-centered is-large">
+        <ul>
+            <li><a href="{{ url_for('home') }}">
+                Home
+            </a>
+            &nbsp;&nbsp;
+            </li>
+            <li><a href="{{ url_for('all_pages') }}">
+                Pages
+                </a>
+            &nbsp;&nbsp;
+            </li>
+            <li> <a href="{{ url_for('about') }}">
+                About
+                </a>
+            &nbsp;&nbsp;
+            </li>
+        </ul>
+    </div>
+    <!-- <div class="has-text-success-dark is-size-4  has-text-weight-medium">
         <a href="{{ url_for('home') }}">
             Home
         </a>
@@ -23,13 +42,14 @@
         <a href="{{ url_for('about') }}">
             About
         </a>
-    </div>
+    </div> -->
 
     <!-- The below tag is using Bulma CSS. Try replacing line 30 with line 29. -->
     <!-- <div class="content"> -->
-    <div>
+    <div class="content">
         {% block content %}{{ page_content }}{% endblock %}
     </div>
+   
 
 </body>
 
